--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
